# serializer version: 1
# name: test_forward_pass_result_matches_the_snapshot[1]
  '[[[-10626, 1799, -9665, -8148, -13464, 11688]], [[-24982, 2695, -32206, 10341, -32053, 24121]], [[-18488, -1328, -15405, 14076, -18728, 12114]]]'
# ---
# name: test_forward_pass_result_matches_the_snapshot[3]
  '[[[-1003, -18, -15427, 2010, -4413, 4286], [-4023, -1968, 2694, -13608, 2805, -8434], [-9429, 20, -1673, -5716, 5712, 23471]], [[-20726, 8858, -18966, 5870, -13606, -25589], [-3416, 5891, 889, -24892, 6859, 28382], [-19506, 195, -11224, 11894, -8533, 26798]], [[-26285, 965, -9725, 8134, -18240, -15587], [6564, 4044, -4660, -4722, -12534, 11717], [5273, -6038, 4032, -9964, -5555, 18314]]]'
# ---
# name: test_forward_pass_result_matches_the_snapshot[None]
  '[[-10626, 1799, -9665, -8148, -13464, 11688], [-24982, 2695, -32206, 10341, -32053, 24121], [-18488, -1328, -15405, 14076, -18728, 12114]]'
# ---
# name: test_representation
  '''
  SparseAutoencoder(
    (_pre_encoder_bias): TiedBias(position=pre_encoder)
    (_encoder): LinearEncoder(
      in_features=3, out_features=6
      (activation_function): ReLU()
    )
    (_decoder): UnitNormDecoder(in_features=6, out_features=3)
    (_post_decoder_bias): TiedBias(position=post_decoder)
  )
  '''
# ---
